Fix overscroll problem
If the page is scrolled up too much, it refreshes the page which is
not what I want. This should fix it.

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,10 @@
   --cities-list-color: hsl(270, 1%, 27%);
 }
 
+body {
+  overscroll-behavior: contain;
+}
+
 #content{
   width: 100vw;
   height: 100vh;
